# cargoTrackVC

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
CargoTrackVC/: LICENSE  Makefile
CargoTrackVC/config/: settings.yaml
CargoTrackVC/demo/: app.js  simulador-cargotrack.html
CargoTrackVC/docker/: docker-compose.yml  prometheus.yml
CargoTrackVC/docs/: API.md  ARCHITECTURE.md  SECURITY.md
CargoTrackVC/src/dte_mvp/: main.py
CargoTrackVC/src/dte_mvp/api/: middleware.py
CargoTrackVC/src/dte_mvp/api/routes/: ordens.py  public_keys.py
CargoTrackVC/src/dte_mvp/core/: constants.py  exceptions.py
CargoTrackVC/src/dte_mvp/infra/database/: models.py
CargoTrackVC/src/dte_mvp/infra/notifications/: push.py
CargoTrackVC/src/dte_mvp/infra/queue/: celery_app.py
CargoTrackVC/src/dte_mvp/models/: notification.py  ordem.py  vc.py
CargoTrackVC/src/dte_mvp/repositories/: audit_repository.py  ordem_repository.py
CargoTrackVC/src/dte_mvp/services/: vc_service.py
CargoTrackVC/tests/integration/flows/: test_fluxo_completo.py
CargoTrackVC/tests/unit/infra/: test_crypto.py
CargoTrackVC/tests/unit/repositories/: test_ordem_repository.py  test_vc_repository.py
CargoTrackVC/tests/unit/services/: __init__.py  test_vc_service.py
config/: logging.yaml  settings.test.yaml
demo/: styles.css
docker/: Dockerfile
docs/: DEPLOYMENT.md
secrets/: README.md
src/dte_mvp/api/routes/: health.py
src/dte_mvp/core/: result.py
src/dte_mvp/infra/: config.py
src/dte_mvp/infra/crypto/: signer.py
src/dte_mvp/infra/database/: session.py
src/dte_mvp/infra/queue/: tasks.py
src/dte_mvp/models/: audit.py
src/dte_mvp/repositories/: vc_repository.py
src/dte_mvp/services/: audit_service.py  ordem_service.py
tests/: conftest.py
tests/fixtures/: test_cert.pem  test_key.pem
tests/integration/flows/: __init__.py
tests/unit/infra/: __init__.py
tests/unit/services/: test_ordem_service.py
